@@ -4788,6 +4788,8 @@ the \kbd{FpXQX} $y$, namely a lift of $1/\kbd{polrecip}(y)+O(x^{\deg(y)-1})$.
 
 \fun{GEN}{FpXQX_extgcd}{GEN x, GEN y, GEN T, GEN p, GEN *ptu, GEN *ptv}
 
+\fun{GEN}{FpXQX_halfgcd}{GEN x, GEN y, GEN T, GEN p}
+
 \fun{GEN}{FpXQX_FpXQXQ_eval}{GEN f,GEN x,GEN S, GEN T,GEN p} returns
 $\kbd{f}(\kbd{x})$.
 
